fix images that are too wide, add all the things image

--- a/docs/fundamentals-1/examples.css
+++ b/docs/fundamentals-1/examples.css
@@ -34,6 +34,8 @@ div.SS_TEMPLATE_CONTENT_LEFT {
 
 div.Ex09 div.SS_TEMPLATE_CONTENT_LEFT,
 div.Ex08 div.SS_TEMPLATE_CONTENT_LEFT,
+div.Ex07 div.SS_TEMPLATE_CONTENT_LEFT,
+div.Ex06 div.SS_TEMPLATE_CONTENT_LEFT,
 div.Ex05 div.SS_TEMPLATE_CONTENT_LEFT,
 div.Ex04 div.SS_TEMPLATE_CONTENT_LEFT,
 div.Ex03 div.SS_TEMPLATE_CONTENT_LEFT
@@ -41,9 +43,8 @@ div.Ex03 div.SS_TEMPLATE_CONTENT_LEFT
   margin-bottom: 60px;
 }
 
-div.Ex10 div.SS_TEMPLATE_CONTENT_LEFT,
-div.Ex06 div.SS_TEMPLATE_CONTENT_LEFT {
-  margin-bottom: 80px;
+div.Ex10 div.SS_TEMPLATE_CONTENT_LEFT {
+  margin-bottom: 70px;
 }
 
 .SS_HIDE_WHILE_LOADING {
